<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:layout_gravity="start"
                android:src="@drawable/bgdis"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="450dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenido"
                    android:textStyle="bold"
                    android:textColor="@color/background"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    android:paddingVertical="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:hint="@string/nombre_del_titular"
                    app:endIconMode="clear_text"
                    android:layout_marginBottom="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombre_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:hint="@string/ingresar_email"
                    app:endIconMode="clear_text"
                    android:layout_marginBottom="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"

                    android:hint="@string/ingresar_password"
                    app:endIconMode="password_toggle"
                    android:layout_marginBottom="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"

                    android:hint="@string/confirm_password"
                    app:endIconMode="password_toggle"
                    android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/terminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terminos"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:padding="0dp" />

                <!-- Login Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/crear_cuenta"
                    android:backgroundTint="@color/accent"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="5dp" />


                <TextView
                    android:id="@+id/iniciarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:padding="8dp" />



            </LinearLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>